#1145 fixed comma spacing

--- a/app/scss/workout/_workoutStructureView.scss
+++ b/app/scss/workout/_workoutStructureView.scss
@@ -88,6 +88,12 @@
                 div {
                     display: inline;
                     font-size: $fontSizeSmall;
+
+                    &.comma
+                    {
+                        margin-left: -3px;
+                    }
+
                 }
 
             } 
